# variational-subspace-methods

./: .gitignore  README.md  pyproject.toml
examples/: bridge_4x4.ipynb  bridge_example.ipynb
examples/example_states/: state_t=0.000.nk  state_t=0.050.nk  state_t=0.100.nk  state_t=0.150.nk  state_t=0.200.nk  state_t=0.250.nk  state_t=0.300.nk  state_t=0.350.nk  state_t=0.400.nk  state_t=0.450.nk  state_t=0.500.nk  state_t=0.550.nk  state_t=0.600.nk  state_t=0.650.nk  state_t=0.700.nk  state_t=0.750.nk  state_t=0.800.nk  state_t=0.850.nk  state_t=0.900.nk  state_t=0.950.nk  state_t=1.000.nk  state_t=1.050.nk  state_t=1.100.nk  state_t=1.150.nk  state_t=1.200.nk  state_t=1.250.nk  state_t=1.300.nk  state_t=1.350.nk  state_t=1.400.nk  state_t=1.450.nk  state_t=1.500.nk  state_t=1.550.nk  state_t=1.600.nk  state_t=1.650.nk  state_t=1.700.nk  state_t=1.750.nk  state_t=1.800.nk  state_t=1.850.nk  state_t=1.900.nk  state_t=1.950.nk  (+56 more)
figures/figure_2/: bridge_plot.ipynb  generate_bridge_data.ipynb
figures/figure_2/data_h=0.1hc/: bridge_data
figures/figure_2/data_h=2.0hc/: bridge_data
figures/figure_4/: plot.ipynb
libraries/bridge/: pyproject.toml
libraries/bridge/bridge/: __init__.py  models.py  numpy_tools.py  sampler.py
libraries/bridge/bridge/_src/: bridge.py  bridge_tools.py  determinant_sampler.py  determinant_state.py  models.py  numpy_tools.py  sum_of_states.py
libraries/bridge/src/bridge/: __init__.py
libraries/bridge/test/: test_bridge_complete_basis.py  test_bridge_discretized_basis.py  test_det_rme_full_basis.py  test_determinant_state.py  test_linear_combination.py  test_observable_estimation.py
libraries/deepnets/: pyproject.toml
libraries/netket_pro/: pyproject.toml
libraries/ptvmc/: pyproject.toml
(+250 files in other folders)
