[project]
name = "bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrien Kahn", email = "adrien.kaet@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.6",
    "jax>=0.5.3",
    "mpmath>=1.3.0",
    "netket>=3.17.1",
    "nqxpack>=0.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
