[project]
name = "bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrien Kahn", email = "adrien.kahn.x19@polytechnique.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.6",
    "jax>=0.5.3",
    "mpmath>=1.3.0",
    "netket>=3.17.1",
    "nqxpack>=0.1.2",
]

[tool.pytest.ini_options]
addopts = "--color=yes --verbose --durations=100 --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "qutip>=5.1.1",
]
